cabal-version: 1.12

name:           seascape
version:        0.1.0.0
synopsis:       An improved interface for UCSD CAPE data
category:       Web
author:         David Cao
maintainer:     david@cao.st
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md

library
  exposed-modules:
      Seascape.App
      Seascape.Model
      Seascape.Views.Partials
  hs-source-dirs:
      src
  build-depends:
      Spock >=0.13.0.0
    , Spock-lucid
    , aeson
    , base >=4 && <5
    , lucid
    , monad-logger
    , persistent
    , persistent-postgresql
    , persistent-template
    , servant
    , text
    , wai-middleware-static
  default-language: Haskell2010

executable seascape-app
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4 && <5
    , Spock >=0.13.0.0
    , seascape
  default-language: Haskell2010
